--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mc_donalds[best food and fastest delivery] |enjoy ur food</title>
+    <title>Veg_costa[best food and fastest delivery] |enjoy ur food</title>
     <link rel="stylesheet" href="style39.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
           width="72px"
           height="72px"
         />
-        <h3>Mc_donalds</h3>
+        <h3>Veg_costa</h3>
       </div>
       <ul>
         <li class="item"><a href="#">Home </a></li>
