--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav id="navbar">
       <div id="logo">
         <img
-          src="/mcdonalds-logo.png"
+          src="/Veg_costa/mcdonalds-logo.png"
           alt="Veg_costa.com"
           width="72px"
           height="72px"
@@ -47,7 +47,7 @@
       <h1 class="h primary">Our services</h1>
       <div id="services">
         <div class="box">
-          <img src="/pizza-346985_1920.jpg" alt=" pizza lelo" />
+          <img src="/Veg_costa/pizza-346985_1920.jpg" alt=" pizza lelo" />
           <h2 class="h-secondary">Food Catering</h2>
           <p class="center">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
