--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="box">
           <img
-            src="/hamburger-1238246_1920.jpg"
+            src="/Veg_costa/hamburger-1238246_1920.jpg"
             alt=" pizza lelo"
           />
           <h2 class="h-secondary">Bulk Ordering</h2>
@@ -76,7 +76,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="/_delivery-boy-.png" alt=" pizza lelo" />
+          <img src="/Veg_costa/_delivery-boy-.png" alt=" pizza lelo" />
           <h2 class="h-secondary">Delivery Services</h2>
           <p class="center">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
@@ -95,19 +95,19 @@
       <h1 class="h primary">Our Clients</h1>
       <div id="clients">
         <div class="clients-item">
-          <img src="/amazon-logo.png" alt="amazon.com" />
+          <img src="/Veg_costa/amazon-logo.png" alt="amazon.com" />
         </div>
         <div class="clients-item">
-          <img src="/samsung-logo.png" alt="samsung_logo.com" />
+          <img src="/Veg_costa/samsung-logo.png" alt="samsung_logo.com" />
         </div>
         <div class="clients-item">
-          <img src="/apple logo.jpg" alt="apple_logo.com" />
+          <img src="/Veg_costa/apple logo.jpg" alt="apple_logo.com" />
         </div>
         <div class="clients-item">
-          <img src="/kfc-logo.jpg" alt="kfc_logo.com" />
+          <img src="/Veg_costa/kfc-logo.jpg" alt="kfc_logo.com" />
         </div>
         <div class="clients-item">
-          <img src="/skype logo.jpg" alt="skype_logo.com" />
+          <img src="/Veg_costa/skype logo.jpg" alt="skype_logo.com" />
         </div>
       </div>
     </section>
